--- a/SfListViewTest/SfListViewTest/SfListViewTest.csproj
+++ b/SfListViewTest/SfListViewTest/SfListViewTest.csproj
@@ -11,6 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="17.3.0.26" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="17.3.0.26" />
+    <PackageReference Include="Syncfusion.Xamarin.Expander" Version="17.3.0.26" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="17.3.0.26" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.936621-pre1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
