--- a/SfListViewTest/SfListViewTest.Android/SfListViewTest.Android.csproj
+++ b/SfListViewTest/SfListViewTest.Android/SfListViewTest.Android.csproj
@@ -76,7 +76,7 @@
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.1.0" />
     <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.0.0" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.0.0" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.1.0-preview06" />
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0" />
     <PackageReference Include="Xamarin.AndroidX.MediaRouter" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.282-pre4" />
