--- a/SfListViewTest/SfListViewTest/SfListViewTest.csproj
+++ b/SfListViewTest/SfListViewTest/SfListViewTest.csproj
@@ -11,11 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="17.4.0.49" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="17.4.0.49" />
-    <PackageReference Include="Syncfusion.Xamarin.Expander" Version="17.4.0.49" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="17.4.0.49" />
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.282-pre4" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.4.0-pre2" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.1.0.57" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.1.0.57" />
+    <PackageReference Include="Syncfusion.Xamarin.Expander" Version="18.1.0.57" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.1.0.57" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 </Project>
