--- a/SfListViewTest/SfListViewTest/SfListViewTest.csproj
+++ b/SfListViewTest/SfListViewTest/SfListViewTest.csproj
@@ -3,19 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+      <LanguageVersion>Latest</LanguageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.4.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.4.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.Expander" Version="18.4.0.44" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.4.0.44" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="20.1.0.50" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="20.1.0.50" />
+    <PackageReference Include="Syncfusion.Xamarin.Expander" Version="20.1.0.50" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="20.1.0.50" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.2" />
   </ItemGroup>
 </Project>
